--- a/src/Panner.AspNetCore.csproj
+++ b/src/Panner.AspNetCore.csproj
@@ -26,7 +26,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
-    <PackageReference Include="Panner" Version="1.0.0" />
+    <PackageReference Include="Panner" Version="1.*" />
   </ItemGroup>
 
   <ItemGroup>
