--- a/tests/Panner.AspNetCore.Tests/Panner.AspNetCore.Tests.csproj
+++ b/tests/Panner.AspNetCore.Tests/Panner.AspNetCore.Tests.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="Moq" Version="4.13.1" />
+    <PackageReference Include="NSubstitute" Version="4.2.1" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.msbuild" Version="2.7.0">
